# robotics_pinocchio

./: CMakeLists.txt  LICENSE  README.md
inc/: test.h
src/: test.cpp
